--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
 }
 
-body, h1, h2, h3, h4, p, figure, blockquote, dl, dd {
+html, body, header, main, footer, h1, h2, h3, h4, p, figure, blockquote, dl, dd {
   margin: 0;
 }
 
